[package]
name = "bevy-basic-ui"
version = "0.4.13"
description = "A small manager for menus and huds"
authors.workspace = true
repository = "https://github.com/KyleWinston/bevy-ui"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = true

keywords = ["bevy", "menus", "ui"]
exclude = ["/examples"]


[dependencies]
serde.workspace = true
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_text",
    "bevy_ui",
    "png",
] }
bevy-inspector-egui.workspace = true
bevy_common_assets = { version = "0.10.0", features = ["toml"] }
async-executor = "1.12.0"
bevy_mod_picking = "0.20.0-rc.0"
bevy_lunex = "0.1.1"
